@@ -1,8 +1,8 @@
 Package: gdsfmt
 Type: Package
 Title: R Interface to CoreArray Genomic Data Structure (GDS) Files
-Version: 1.23.13
-Date: 2020-04-18
+Version: 1.23.14
+Date: 2020-04-25
 Depends: R (>= 2.15.0), methods
 Suggests: parallel, digest, Matrix, RUnit, knitr, crayon, BiocGenerics
 Author: Xiuwen Zheng [aut, cre] (<https://orcid.org/0000-0002-1390-0708>),
@@ -11,20 +11,18 @@ Author: Xiuwen Zheng [aut, cre] (<https://orcid.org/0000-0002-1390-0708>),
         Yann Collet [ctb] (for the included LZ4 sources),
         xz contributors [ctb] (for the included liblzma sources)
 Maintainer: Xiuwen Zheng <zhengx@u.washington.edu>
-Description: This package provides a high-level R interface to
-        CoreArray Genomic Data Structure (GDS) data files, which are
-        portable across platforms with hierarchical structure to
-        store multiple scalable array-oriented data sets with metadata
-        information. It is suited for large-scale datasets, especially
-        for data which are much larger than the available random-access
-        memory. The gdsfmt package offers the efficient operations
-        specifically designed for integers of less than 8 bits, since
-        a diploid genotype, like single-nucleotide polymorphism (SNP),
-        usually occupies fewer bits than a byte.
-        Data compression and decompression are available with relatively
-        efficient random access. It is also allowed to read a GDS
-        file in parallel with multiple R processes supported by the
-        package parallel.
+Description: Provides a high-level R interface to CoreArray Genomic Data
+        Structure (GDS) data files. GDS is portable across platforms with
+        hierarchical structure to store multiple scalable array-oriented data
+        sets with metadata information. It is suited for large-scale datasets,
+        especially for data which are much larger than the available
+        random-access memory. The gdsfmt package offers the efficient operations
+        specifically designed for integers of less than 8 bits, since a diploid
+        genotype, like single-nucleotide polymorphism (SNP), usually occupies
+        fewer bits than a byte. Data compression and decompression are available
+        with relatively efficient random access. It is also allowed to read a
+        GDS file in parallel with multiple R processes supported by the package
+        parallel.
 License: LGPL-3
 Copyright: This package includes the sources of CoreArray C++ library
         written by Xiuwen Zheng (LGPL-3), zlib written by Jean-loup
@@ -34,5 +32,5 @@ Copyright: This package includes the sources of CoreArray C++ library
 VignetteBuilder: knitr
 ByteCompile: TRUE
 BugReports: http://github.com/zhengxwen/gdsfmt/issues
-URL: http://corearray.sourceforge.net/, http://github.com/zhengxwen/gdsfmt
+URL: http://github.com/zhengxwen/gdsfmt
 biocViews: Infrastructure, DataImport
